# awayonlock

./: AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  TODO  awayonlock.c  callback.c  callback.h  i18n.h  prefs.c  prefs.h
i18n/: CMakeLists.txt  pidgin-awayonlock.pot  pt_BR.po
utils/: mimic_gnome-screensaver.py
